# ece1387_a3

./: .gitignore  CMakeLists.txt  README  bitfield.h  circuit.cpp  circuit.h  file_read_test.cc  main.cpp  partition.cpp  partition.h  partition_test.cc  ui.cpp  ui.h  version.h
data/: cct1  cct2  cct3  cct4  partition_test
easygl/: graphics.cpp  graphics.h
